<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">课程管理</string>
    <string name="title_home">首页</string>
    <string name="title_schedule">课表</string>
    <string name="title_profile">我的</string>
    <string name="welcome">欢迎使用课程管理系统</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="username">用户名</string>
    <string name="password">密码</string>
    <string name="confirm_password">确认密码</string>
    <string name="forgot_password">忘记密码？</string>
    <string name="today_courses">今日课程</string>
    <string name="view_more">查看更多</string>
    <string name="functions">功能</string>
    <string name="courses">课程</string>
    <string name="assignments">作业</string>
    <string name="exams">考试</string>
    <string name="grades">成绩</string>
    <string name="no_data">暂无数据</string>
    <string name="network_error">网络错误，请稍后重试</string>
    <string name="loading">加载中…</string>
    <string name="course_detail">课程详情</string>
    <string name="course_name">课程名称</string>
    <string name="teacher_name">授课教师</string>
    <string name="classroom">教室</string>
    <string name="class_time">上课时间</string>
    <string name="add_course">添加课程</string>
    <string name="edit_course">编辑课程</string>
    <string name="delete_course">删除课程</string>
    <string name="save">保存</string>
    <string name="cancel">取消</string>
    <string name="confirm">确认</string>
    <string name="confirm_delete">确认删除吗？</string>
    <string name="cannot_be_empty">不能为空</string>
    <string name="add_success">添加成功</string>
    <string name="edit_success">编辑成功</string>
    <string name="delete_success">删除成功</string>
    <string name="operation_failed">操作失败</string>
    <string name="select_weekday">选择星期</string>
    <string name="select_section">选择节次</string>
    <string name="select_week">选择周数</string>
    <string name="start_section">开始节次</string>
    <string name="end_section">结束节次</string>
    <string name="start_week">开始周</string>
    <string name="end_week">结束周</string>
    
    <!-- 添加缺少的字符串 -->
    <string name="assignment">作业</string>
    <string name="exam">考试</string>
    <string name="teacher">教师</string>
    <string name="time">时间</string>
    <string name="current_week">当前周</string>
    <string name="week_format">第%d周</string>
    <string name="today_schedule">今日课表</string>
    <string name="function_course">课程</string>
    <string name="function_assignment">作业</string>
    <string name="function_exam">考试</string>
    <string name="function_grade">成绩</string>
    <string name="settings">设置</string>
    <string name="logout">退出登录</string>
    <string name="timetable_view">课程表视图</string>
    <string name="course_list">课程列表</string>
    <string name="profile_title">个人中心</string>
    <string name="grade">成绩</string>
    
    <!-- 添加周数字符串 -->
    <string name="week_1">第1周</string>
    <string name="week_2">第2周</string>
    <string name="week_3">第3周</string>
    <string name="week_4">第4周</string>
    <string name="week_5">第5周</string>
    <string name="week_6">第6周</string>
    <string name="week_7">第7周</string>
    <string name="week_8">第8周</string>
    <string name="week_9">第9周</string>
    <string name="week_10">第10周</string>
    <string name="week_11">第11周</string>
    <string name="week_12">第12周</string>
    <string name="week_13">第13周</string>
    <string name="week_14">第14周</string>
    <string name="week_15">第15周</string>
    <string name="week_16">第16周</string>
    <string name="week_17">第17周</string>
    <string name="week_18">第18周</string>
    <string name="week_19">第19周</string>
    <string name="week_20">第20周</string>
</resources>